# Rust-max31865-embedded-hal

./: Cargo.toml  README.md  build
src/: main.rs
