[package]
name = "max31865"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
linux-embedded-hal = "0.3.0"
max31865 = "0.1.1"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
